--- a/IDE/Vdom/Vdom.mxml
+++ b/IDE/Vdom/Vdom.mxml
@@ -54,10 +54,13 @@
 				</controls:MainTabNavigator>
 			</mx:Canvas>
 			<mx:Image x="10" y="10" width="62" height="62" source="{vdomLogo}"/>
-			<mx:Label id="userName"
-				text="USER: {authenticationManager.username.toUpperCase()} - VDOM IDE"
-				y="15" horizontalCenter="0" fontWeight="bold" color="#FFFFFF"
-				/>
+			<mx:HBox y="21" width="606" horizontalCenter="0" horizontalAlign="center" verticalAlign="bottom">
+				<mx:Label id="userName"
+					text="USER: {authenticationManager.username.toUpperCase()} - VDOM IDE"
+					fontWeight="bold" color="#FFFFFF"
+					/>
+				<mx:Label text="Beta" fontWeight="bold" color="#8C8C8C"/>
+			</mx:HBox>
 		</mx:Canvas>
 	</mx:ViewStack>
 </mx:WindowedApplication>
