--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
@@ -59,11 +59,11 @@
 			<mx:VRule height="100%" />
 			
 			<mx:Label text="Filter:" fontWeight="bold"/>
-			<mx:ComboBox id="__filterCBx" width="100%" dataProvider="{filterDataProvider}" change="{filterCBxHandler();}" />
+			<mx:ComboBox id="__filterCBx" width="150" dataProvider="{filterDataProvider}" change="{filterCBxHandler();}" />
 			<mx:VRule height="100%" />
-			<mx:Spacer width="150" />
+			<mx:Spacer width="100%" />
 			<mx:Button height="24" label="Upload File..." click="{fileUploadHandler();}"
-				icon="@Embed(source='/assets/resourceBrowserIcons/interface/upload.png')" />
+				icon="@Embed(source='/assets/resourceBrowserIcons/interface/upload.png')"  width="120"/>
 			
 			<!--
 			<mx:VRule height="100%" />
@@ -87,15 +87,15 @@
 				
 				
 				<mx:Box cornerRadius="3" backgroundColor="#FFF6EA" borderStyle="solid" paddingLeft="5" paddingRight="5">
-					<mx:Label id="__rName" text="" height="18" fontWeight="bold" maxWidth="350" textAlign="center" />
+					<mx:Label id="__rName" text="" height="18" fontWeight="bold" maxWidth="350" textAlign="center"  width="320"/>
 				</mx:Box>
 				<mx:HBox width="100%" verticalAlign="middle" horizontalAlign="center">
 					<mx:Box cornerRadius="3" backgroundColor="#FFF6EA" borderStyle="solid" paddingLeft="5" paddingRight="5">
-						<mx:Label id="__rType" text="" height="18" fontWeight="bold" />
+						<mx:Label id="__rType" text="" height="18" fontWeight="bold"  width="150"/>
 					</mx:Box>
 					<mx:VRule height="18" />
 					<mx:Box cornerRadius="3" backgroundColor="#FFF6EA" borderStyle="solid" paddingLeft="5" paddingRight="5">
-						<mx:Label id="__iResolution" text="" height="18" fontWeight="bold" />
+						<mx:Label id="__iResolution" text="" height="18" fontWeight="bold"  width="150"/>
 					</mx:Box>					
 				</mx:HBox>
 			</mx:VBox>				
