--- a/IDE/Vdom/vdom/managers/wc.mxml
+++ b/IDE/Vdom/vdom/managers/wc.mxml
@@ -1,4 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" backgroundColor="#FFFFFF" backgroundAlpha="1.0" borderStyle="solid" borderColor="#000000">
-	
+<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" backgroundColor="#FFFFFF" backgroundAlpha="1.0" borderStyle="none">
 </mx:Canvas>
