git-svn-id: http://svn.vdombox.ru/flextools/trunk@2288 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -40,7 +40,7 @@
 	            <menuitem label="{LanguageManager.sentences.menu_save_as}" id="save_as" keyEquivalent="s" ctrlKey="true" shiftKey="true"/> 
 	            <menuitem type="separator"/>
 	            <menuitem label="{LanguageManager.sentences.menu_import}" id="import" enabled="true"/> 
-	            <menuitem label="{LanguageManager.sentences.menu_import}" id="import_from_tpl" enabled="true"/> 
+	            <menuitem label="{LanguageManager.sentences.import_from_tpl}" id="import_from_tpl" enabled="true"/> 
 	            <menuitem type="separator"/>
 	            <menuitem label="{LanguageManager.sentences.menu_exit}" id="exit"/>                                                
 	        </menuitem>
