--- a/PowerPack/v.01/ExtendedAPI/ExtendedAPI/com/controls/HDivider.mxml
+++ b/PowerPack/v.01/ExtendedAPI/ExtendedAPI/com/controls/HDivider.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:HBox xmlns:mx="http://www.adobe.com/2006/mxml" verticalAlign="middle" width="100%">
+<mx:HBox xmlns:mx="http://www.adobe.com/2006/mxml" verticalAlign="middle" width="100%"  disabledOverlayAlpha="0.0">
 	<mx:HRule width="50%"/>
 	<mx:Label text="{label}"/>
 	<mx:HRule width="50%"/>
