git-svn-id: http://svn.vdombox.ru/flextools/trunk@2298 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -460,7 +460,7 @@
 				}
 				else if(event.item.@id == "import")
 				{
-					Import.show();
+					Import.show(onImportClose);
 				}
 				else if(event.item.@id == "import_from_tpl")
 				{
@@ -829,7 +829,24 @@
             	
             	ProgressManager.complete();
             }            
-            
+
+            private function onImportClose(event:Event):void
+            {            	
+            	if(event is CloseEvent)
+            	{
+            		var graphs:Array = event.target.graphs;
+            		
+            		if(graphs.length>0)
+            		{
+	            		for each (var graph:GraphCanvas in graphs) {
+	            			pnl_graphs.addGraph(graph);
+						}
+            		}
+            	}
+            	
+            	ProgressManager.complete();
+            }  
+                        
            	private function generationComplete(event:Event):void
            	{
            		switchDebug(false);
