git-svn-id: http://svn.vdombox.ru/flextools/trunk@2316 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/_src/theme/css/editor.css
+++ b/IDE/Vdom/_src/theme/css/editor.css
@@ -88,9 +88,15 @@ AttributesPanel {
 WorkArea {
 	
 	dropShadowEnabled: true;
-	backgroundColor: #ffffff;
+	backgroundColor: #FFFFFF;
 	backgroundAlpha: 1.0; 
 	borderStyle: solid; 
 	borderThickness: 1;
 	borderColor: #000000;
+}
+
+.WYSIWYGItem {
+	
+	backgroundColor: #FFFFFF;
+	backgroundAlpha: .0;
 }
