git-svn-id: http://svn.vdombox.ru/flextools/trunk@2349 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/Graphs.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/Graphs.mxml
@@ -140,7 +140,7 @@
 			
 			public function addGraph(graph:GraphCanvas):void
 			{
-				initGraphs.addItem(graph);
+				initGraphs.addItem(graph);				
 				vsViewStack.addChild(graph);	
 				
 				var graphAccordionChild:AccordionChild = null;
@@ -157,7 +157,10 @@
 				if(!graphAccordionChild)
 					graphAccordionChild = createCategoryTab(graph.category); 
 
-				graphAccordionChild.graphs.addItem(graph);			
+				graphAccordionChild.graphs.addItem(graph);
+				
+				if(graph.initial)
+					cbInitGraph.selectedItem = graph;			
 			}
 			
 			public function findFirstGraph():GraphCanvas
