--- a/DB/DataEditor/v.01/dbDataEditor.mxml
+++ b/DB/DataEditor/v.01/dbDataEditor.mxml
@@ -15,7 +15,7 @@
 		itemEditEnd="{itemEditEnd(event);}" itemEditBegin="{itemEditBegin(event);}" editable="true"
 		doubleClickEnabled="true" doubleClick="{addRowBtnClickHandler(event);}"/>
 	<mx:HBox width="100%" horizontalAlign="right" horizontalGap="0" paddingBottom="0" paddingTop="0">
-		<mx:Label text="Total rows:" fontSize="9" />
+		<mx:Label text="Total rows in table:" fontSize="9" />
 		<mx:Label id="__rowsCount" text="{totalRecords}" fontSize="9" fontWeight="bold" />	
 	</mx:HBox>
 	<mx:HBox width="100%" height="20" horizontalAlign="left" verticalAlign="middle" horizontalGap="0" paddingRight="0" paddingLeft="0">
