git-svn-id: http://svn.vdombox.ru/flextools/trunk@2363 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/ValidateDialog.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/ValidateDialog.mxml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ModalDialog xmlns="PowerPack.com.dialog.*" xmlns:mx="http://www.adobe.com/2006/mxml" 
+<ModalDialog 
+	xmlns="PowerPack.com.dialog.*" 
+	xmlns:mx="http://www.adobe.com/2006/mxml" 
 	width="322" height="248"
-	title="{LanguageManager.sentences.validate}" xmlns:control="PowerPack.com.control.*">
+	title="{LanguageManager.sentences.validate}" 
+	xmlns:control="PowerPack.com.control.*">
 	
 	<mx:Script>
 		<![CDATA[
