--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/EditCaption.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/EditCaption.mxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ModalDialog xmlns="PowerPack.com.dialog.*" xmlns:mx="http://www.adobe.com/2006/mxml" 
+<ModalDialog 
+	xmlns="PowerPack.com.dialog.*" 
+	xmlns:mx="http://www.adobe.com/2006/mxml" 
 	width="300" height="130">
 	<mx:Script>
 		<![CDATA[
