--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/GenModalDialog.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/GenModalDialog.mxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ModalDialog xmlns="PowerPack.com.dialog.*" xmlns:mx="http://www.adobe.com/2006/mxml"		
+<ModalDialog 
+	xmlns="PowerPack.com.dialog.*" 
+	xmlns:mx="http://www.adobe.com/2006/mxml"		
 	showStatusBar="false"
 	showGripper="false"
 	systemChrome="none"
