--- a/PowerPack/v.01/PowerPack/sources/style/builder.css
+++ b/PowerPack/v.01/PowerPack/sources/style/builder.css
@@ -102,6 +102,8 @@ PopUpToolBar
 	paddingRight: 10;
 	paddingTop: 10;
 	paddingBottom : 5;
+	
+	percentWidth: 100;
 		
 	backgroundColor: #f1f1f0;
 }
@@ -109,14 +111,21 @@ PopUpToolBar
 .dlgContent
 {
 	verticalGap: 5;
-	paddingLeft: 20;
+	paddingLeft: 10;
 	paddingRight: 10;
 	paddingTop: 10;
-	paddingBottom : 5;
+	paddingBottom: 5;
+	
+	percentWidth: 100;
+	percentHeight: 100;
+	
+	horizontalAlign: center;
 }
 
 .dlgFooter
 {
+	percentWidth: 100;
+	
 	horizontalAlign: right;
 	verticalAlign: bottom;
 }
