git-svn-id: http://svn.vdombox.ru/flextools/trunk@2365 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/ExtendedAPI/ExtendedAPI/com/controls/FileBrowseBox.mxml
+++ b/PowerPack/v.01/ExtendedAPI/ExtendedAPI/com/controls/FileBrowseBox.mxml
@@ -16,8 +16,12 @@
 			import ExtendedAPI.com.utils.FileUtils;
 			import mx.utils.StringUtil;
 			
-			public var files:Array = [];
+			public static const MODE_OPEN:String = "open";
+			public static const MODE_SAVE:String = "save";
+			public static const MODE_DIR:String = "dir";
+			public static const MODE_MULTI:String = "multi";
 			
+			public var files:Array = [];			
 			public var filterArray:Array = [];
 		
 			private function onBrowseClick(event:MouseEvent):void
