--- a/IDE/Core/vdom/components/loginForm/LoginForm.mxml
+++ b/IDE/Core/vdom/components/loginForm/LoginForm.mxml
@@ -4,6 +4,7 @@
 	xmlns:mx="http://www.adobe.com/2006/mxml"
 	
 	width="100%" height="100%"
+	horizontalScrollPolicy="off" verticalScrollPolicy="off"
 	
 	creationComplete="creationCompleteHandler();"
 	
@@ -52,23 +53,20 @@
 			<mx:FormItem
 				label="{resourceManager.getString('LoginForm','username')}">
 				<mx:TextInput id="_username"
-					width="140" text="root"/>
+					width="140" text="{userData.username}"/>
 			</mx:FormItem>
 			<mx:FormItem 
 				label="{resourceManager.getString('LoginForm','password')}">
 				<mx:TextInput id="_password"
 					width="140" 
-					displayAsPassword="true" text="root"/>
+					displayAsPassword="true" text="{userData.password}"/>
 			</mx:FormItem>
 			<mx:FormItem 
 				label="{resourceManager.getString('LoginForm','ip')}">
-				<mx:TextInput id="_ip"
-					width="140" 
+				<mx:TextInput id="_ip" 
+					width="140"
+					text="{userData.hostname}"/>
 
- text="localhost"/>
-
-					
- 
 			</mx:FormItem>
 			<mx:FormItem
 				label="{resourceManager.getString('LoginForm','language')}">
