--- a/IDE/Vdom/vdom/modules/ApplicationManagment.mxml
+++ b/IDE/Vdom/vdom/modules/ApplicationManagment.mxml
@@ -11,7 +11,9 @@
 	
 	creationComplete="creationCompleteHandler();"
 	show="showHandler();"
-	hide="hideHandler();">
+	hide="hideHandler();"
+	
+	creationPolicy="all">
 	
 <mx:Script source="includes/applicationManagment.as" />
 
@@ -66,6 +68,5 @@
 		<searchResult:SearchResult id="searchResult"
 			width="100%" height="100%" />
 	</mx:ViewStack>
-	
 </mx:VBox>
 </mx:ViewStack>
