git-svn-id: http://svn.vdombox.ru/flextools/trunk@2400 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/core/vdomTitleBar/VdomTitleBar.mxml
+++ b/IDE/Vdom/vdom/core/vdomTitleBar/VdomTitleBar.mxml
@@ -6,6 +6,11 @@
 	
 	doubleClickEnabled="true"
 	height="50">
+	
+	<mx:Metadata>
+		[Event(name="logout", type="flash.events.Event")]
+	</mx:Metadata>
+	
 	<mx:Script>
 		<![CDATA[
 			import vdom.managers.DataManager;
@@ -129,7 +134,8 @@
 			
 			private function logout():void
 			{
-				dataManager.close();
+//				dataManager.close();
+				dispatchEvent(new Event("logout"));
 			}
 		]]>
 	</mx:Script>
