--- a/IDE/Vdom/Vdom.mxml
+++ b/IDE/Vdom/Vdom.mxml
@@ -8,12 +8,14 @@
 	xmlns:mx="http://www.adobe.com/2006/mxml"
 	xmlns:vdomTitleBar="vdom.core.vdomTitleBar.*"
 	xmlns:loginForm="vdom.components.loginForm.*"
+	xmlns:containers="vdom.containers.*" 
+	xmlns:modules="vdom.modules.*"
 		
 	preinitialize="preinitalizeHandler();"
 	
 	layout="absolute"
 	verticalScrollPolicy="off"
-	xmlns:containers="vdom.containers.*" xmlns:modules="vdom.modules.*">
+	creationPolicy="all">
 	
 	<mx:Script source="vdom.as"/>
 	
@@ -31,6 +33,8 @@
 	
 		<mx:Canvas id="main"  width="100%" height="100%" show="showMainHandler();">
 			
+			<vdomTitleBar:VdomTitleBar  left="0" right="0" logout="logoutHandler();"/>
+			
 			<mx:Image x="10" y="10" width="62" height="62" source="{vdomLogo}"/>
 			
 			<mx:HBox y="21" width="606" horizontalCenter="0" horizontalAlign="center" verticalAlign="bottom">
@@ -41,10 +45,8 @@
 				<mx:Label text="Beta" fontWeight="bold" color="#8C8C8C"/>
 			</mx:HBox>
 			
-			<vdomTitleBar:VdomTitleBar  left="0" right="0"/>
-			
 			<mx:Canvas backgroundColor="#FFFFFF" top="50" right="0" bottom="0" left="0" borderStyle="solid" borderColor="#000000">
-				<containers:MainTabNavigator id="tabPanel"
+				<containers:MainTabNavigator id="moduleTabNavigator"
 					right="5" bottom="5" left="5" top="5"
 					borderStyle="none" 
 					tabHeight="25" tabPaddingLeft="80">
