git-svn-id: http://svn.vdombox.ru/flextools/trunk@2401 230e8929-42e3-3b44-a413-55659dd3a577

--- a/DB/DataEditor/v.01/dbDataEditor.mxml
+++ b/DB/DataEditor/v.01/dbDataEditor.mxml
@@ -37,7 +37,7 @@
 					icon="@Embed(source='/icons/discard.png')" />
 				<mx:Spacer width="100%" />
 				<mx:HBox horizontalGap="0">
-					<mx:Label id="__operCount" fontWeight="bold" text="0" textAlign="right" />
+					<mx:Label id="__queueLenght" fontWeight="bold" text="0" textAlign="right" />
 					<mx:Label text="operation(s) in queue" />
 				</mx:HBox>
 			</mx:HBox>
