git-svn-id: http://svn.vdombox.ru/flextools/trunk@2403 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/edit/Edit.mxml
+++ b/IDE/Vdom/vdom/components/edit/Edit.mxml
@@ -19,7 +19,7 @@
 	
 	<editContainers:TypeAccordion id="types"
 		y="100" width="90" minWidth="90" maxWidth="90"
-		dataProvider="{dataManager.listTypes}" dropShadowEnabled="true"/>
+		dropShadowEnabled="true"/>
 	
 		<containers:AdvancedTabNavigator id="mainArea"
 			width="100%" borderStyle="none">			
